Fix dropdown alignments (#85)
* Fix dropdown alignments

* Remove unused 'alignRight' props

--- a/themes/bootstrap/scss/_sjc-navbar.scss
+++ b/themes/bootstrap/scss/_sjc-navbar.scss
@@ -123,7 +123,7 @@
   }
 
   .profile-dropdown-menu {
-    top: 50.4px;
+    top: 50.5px;
   }
 
   .profile-dropdown-menu,
